Made a slight change that doesn't require a prompt from conda to install the required package.

--- a/assignments/day1/ML@B Bootcamp - Day 1.ipynb
+++ b/assignments/day1/ML@B Bootcamp - Day 1.ipynb
@@ -67,7 +67,7 @@
    "outputs": [],
    "source": [
     "# If you haven't installed mlxtend yet for ipython\n",
-    "!conda install -c rasbt mlxtend"
+    "!conda install -c rasbt mlxtend -qy"
    ]
   },
   {
@@ -625,7 +625,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   },
   "name": "_merged"
  },
