--- a/assignments/day1/ML@B Bootcamp - Day 1 Solutions.ipynb
+++ b/assignments/day1/ML@B Bootcamp - Day 1 Solutions.ipynb
@@ -89,7 +89,7 @@
    ],
    "source": [
     "# If you haven't installed mlxtend yet for ipython\n",
-    "!conda install -c rasbt mlxtend"
+    "!conda install -c rasbt mlxtend -qy"
    ]
   },
   {
@@ -355,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
