--- a/assignments/day1/SVM.ipynb
+++ b/assignments/day1/SVM.ipynb
@@ -1,6 +1,104 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Perceptron - IRIS dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "class Perceptron(object):\n",
+    "\n",
+    "    def __init__(self, eta=0.01, epochs=50):\n",
+    "        self.eta = eta\n",
+    "        self.epochs = epochs\n",
+    "\n",
+    "    def train(self, X, y):\n",
+    "\n",
+    "        self.w_ = np.zeros(X.shape[1])\n",
+    "        self.errors_ = []\n",
+    "\n",
+    "        for _ in range(self.epochs):\n",
+    "            ### FILL THIS IN ###\n",
+    "        return self\n",
+    "\n",
+    "    def net_input(self, X):\n",
+    "        return np.dot(X, self.w_)\n",
+    "\n",
+    "    def predict(self, X):\n",
+    "        return np.where(self.net_input(X) >= 0.0, 1, -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv('https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data', header=None)\n",
+    "\n",
+    "# setosa and versicolor\n",
+    "y = df.iloc[0:100, 4].values\n",
+    "y = np.where(y == 'Iris-setosa', -1, 1)\n",
+    "\n",
+    "# sepal length and petal length\n",
+    "X = df.iloc[0:100, [0,2]].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# If you haven't installed mlxtend yet for ipython\n",
+    "!conda install -c rasbt mlxtend"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt\n",
+    "from mlxtend.evaluate import plot_decision_regions\n",
+    "\n",
+    "ppn = Perceptron(epochs=10, eta=.01)\n",
+    "\n",
+    "ppn.train(X, y)\n",
+    "print('Weights: %s' % ppn.w_)\n",
+    "plot_decision_regions(X, y, clf=ppn)\n",
+    "plt.title('Perceptron')\n",
+    "plt.xlabel('sepal length [cm]')\n",
+    "plt.ylabel('petal length [cm]')\n",
+    "plt.show()\n",
+    "\n",
+    "plt.plot(range(1, len(ppn.errors_)+1), ppn.errors_, marker='o')\n",
+    "plt.xlabel('Iterations')\n",
+    "plt.ylabel('Missclassifications')\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
